--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
     <title>Growmax | ERP Based Companey</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Initial loader while React loads -->
+      <style>
+        #initial-loader {
+          position: fixed;
+          inset: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: #ffffff;
+          z-index: 9999;
+        }
+        .dark #initial-loader {
+          background: #0a0a0a;
+        }
+        .loader-spinner {
+          width: 50px;
+          height: 50px;
+          border: 4px solid #f3f3f3;
+          border-top: 4px solid #0a0a0a;
+          border-radius: 50%;
+          animation: spin 1s linear infinite;
+        }
+        .dark .loader-spinner {
+          border-color: #262626;
+          border-top-color: #fafafa;
+        }
+        @keyframes spin {
+          0% { transform: rotate(0deg); }
+          100% { transform: rotate(360deg); }
+        }
+      </style>
+      <div id="initial-loader">
+        <div class="loader-spinner"></div>
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
